--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
-
-.title{
-    margin-bottom: 0;
+h1 {
+  text-align: center;
+  color: Blue;
 }
 
-
-#scoreBoard{
-    margin: 0px;
-
+h2 {
+  color: Red;
+  margin-left: 10vh;
 }
 
-#startBtn{
-    position: absolute;
-    top: 200px;
-    left: 50px;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
+.title {
+  margin-bottom: 0;
 }
-#restartBtn{
-    position: absolute;
-    top: 300px;
-    left: 50px;
-    width: 200px;
-    height: 50px;
-    font-size: 20px;
+
+#scoreBoard {
+  margin: 0px;
+}
+
+#startBtn {
+  position: absolute;
+  top: 200px;
+  left: 50px;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+}
+#restartBtn {
+  position: absolute;
+  top: 300px;
+  left: 50px;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
 }
